<resources>
    <string name="app_name">林氏智能家</string>
    <string name="tab_home">家</string>
    <string name="tab_message">消息</string>
    <string name="tab_setting">管理</string>
    <string name="phone_number">手机号码</string>
    <string name="hint_code">验证码</string>
    <string name="auto_login">自动登录</string>
    <string name="sms_login">短信登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="set_pwd_login">设置登录密码</string>
    <string name="login">登录</string>
    <string name="or">社交登录</string>
    <string name="code_failed">验证失败，请检查</string>
    <string name="phone_failed">请填写正确手机号码</string>
    <string name="phone_code_null">请填写手机和验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="been_send">已发送 - </string>
    <string name="password_first">设置登录密码</string>
    <string name="password_second">再输入一次，确认登录密码</string>
    <string name="password_least">密码长度最少6位</string>
    <string name="password_double_check">请确认两次密码输入无误</string>
    <string name="password_tips">请先使用短信登录，再修改登录密码</string>
    <string name="begin_grant">开始授权</string>
    <string name="readme_grant">授权说明</string>
    <string name="detail_grant">林氏智能家需要以下这些权限，请授予：\n\n1.位置权限，用于获取当前位置以提供室外空气数据\n\n2.短信权限，用于接收验证登录短信\n\n3.存储权限，用于存储必要的数据\n\n4.电话状态，用于获取手机当前状态以提供更好的应用体验</string>
    <string name="message_flag">消息标识</string>
    <string name="message_title">消息通知</string>
    <string name="message_notification">通知</string>
    <string name="message_news">林氏最新</string>
    <string name="message_empty">暂时没有消息哦</string>
    <string name="message_delete_delay">消息准备删除</string>
    <string name="message_delete_success">删除成功</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex">性别</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="good">优</string>
    <string name="mid">良</string>
    <string name="mid_mid">中</string>
    <string name="bad">差</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="data">数据</string>
    <string name="zoom">放大</string>
    <string name="sorrow">缩小</string>
    <string name="clean">净化</string>
    <string name="turn_on">开启</string>
    <string name="shut_down">关闭</string>
    <string name="review">查看</string>
    <string name="slash"> / </string>
    <string name="dash"> - </string>
    <string name="exit">退出</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="password">密码</string>
    <string name="refresh">刷新</string>
    <string name="customize">自定义</string>
    <string name="device">设备</string>
    <string name="undo">撤销</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="danger">危险</string>
    <string name="minimum">最小值</string>
    <string name="maximum">最大值</string>
    <string name="reject">拒绝</string>
    <string name="accept">同意</string>
    <string name="next">下一步</string>
    <string name="back">上一步</string>
    <string name="set">配置</string>
    <string name="finish">完成</string>
    <string name="scan">扫描</string>
    <string name="at">于</string>
    <string name="skip">忽略</string>
    <string name="skip_step">跳过</string>
    <string name="weather_wet">相对湿度</string>
    <string name="weather_air">空气质量指数：</string>
    <string name="wait_confirm">等待确认</string>
    <string name="have_confirm">已确认</string>
    <string name="no_phone">未知电话</string>
    <string name="switch_row">\n</string>
    <string name="no_connect">未连接</string>
    <string name="connected">已连接</string>
    <string name="check_device">检测器</string>
    <string name="action_device">净化器</string>
    <string name="both_device">检测与执行</string>
    <string name="sensor_number">个传感器</string>
    <string name="sensor_working">工作中</string>
    <string name="sensor_stop">已罢工</string>
    <string name="right_now">当前：</string>
    <string name="right_now_check">当前检测：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="wind_machine">风速</string>
    <string name="anion_machine">负离子</string>
    <string name="check_time">检测:</string>
    <string name="room_quality">的空气质量</string>
    <string name="outside_quality">室外空气质量</string>
    <string name="wind_ward">风向</string>
    <string name="action_running">净化中</string>
    <string name="air_disconnect">净化器已断开</string>
    <string name="air_unbind">还没有绑定净化器？</string>
    <string name="air_connect">重新连接</string>
    <string name="air_connect_text">检测器已断开连接</string>
    <string name="air_binding">马上绑定</string>
    <string name="min_value">当天最小值：</string>
    <string name="switch_need">更换滤网</string>
    <string name="switch_none">滤网正常</string>
    <string name="select_value">选中检测值</string>
    <string name="select_time">检测时间</string>
    <string name="mac_address">设备标识：</string>
    <string name="add">新增</string>
    <string name="submit">提交</string>
    <string name="qr_code">配置网络</string>
    <string name="zoom_tool">放大缩小工具</string>
    <string name="no_check_machine">没有检测器</string>
    <string name="no_action_machine">没有净化器</string>
    <string name="go_binding">去绑定</string>
    <string name="no_connect_check_machine">检测器断开</string>
    <string name="re_connect">连接</string>
    <string name="no_check_data">没有检测数据</string>
    <string name="no_permission">你没有权限操作哦</string>
    <string name="no_quick_turn">净化器已断开，无法一键净化</string>
    <string name="loading_quick_turn">一键净化\n开启中</string>
    <string name="quick_turn">一键净化</string>
    <string name="no_data">没有数据</string>
    <string name="air_quality_port">空气质量：</string>
    <string name="air_quality">室内空气评分</string>
    <string name="re_get">重新获取</string>
    <string name="loading_binding">正在绑定设备</string>
    <string name="success_binding">绑定成功</string>
    <string name="location_off_weather_fail">定位已关闭，无法获取准确的天气信息</string>
    <string name="weather_fail_port">天气信息获取失败：</string>
    <string name="weather_fail_text">天气信息获取失败</string>
    <string name="today_chart">最新检测</string>
    <string name="week_chart">本周</string>
    <string name="create_task">创建任务</string>
    <string name="result_check">检测结果</string>
    <string name="result_check_over">超标检测任务</string>
    <string name="result_check_content">指定检测项目，当项目超标时开启净化器相关功能</string>
    <string name="item_check_over">超标检测</string>
    <string name="item_check_over_content">当选中的检测项目超过建议值时</string>
    <string name="run_time">运行时间</string>
    <string name="action_title">净化器功能</string>
    <string name="action_content">检测超标后，净化器采取的动作</string>
    <string name="action_timer_content">到达设定时间后，净化器采取的动作</string>
    <string name="timer_task">定时任务</string>
    <string name="timer_task_content">指定时间，开启净化器相关功能</string>
    <string name="timer_content">当到达设定的时间时</string>
    <string name="everyday">每天执行</string>
    <string name="timer_default">00：00</string>
    <string name="timer_begin_date">开始日期</string>
    <string name="task_check_item">检测项</string>
    <string name="item_1">甲醛</string>
    <string name="item_2">PM2.5</string>
    <string name="item_3">VOC</string>
    <string name="item_4">甲苯</string>
    <string name="task_action">开始执行</string>
    <string name="task_action_function">开启净化器功能</string>
    <string name="task_begin">开启任务</string>
    <string name="wifi_now">当前WiFi：</string>
    <string name="customize_function">自定义功能</string>
    <string name="customize_function_s">的自定义功能</string>
    <string name="customize_delete_text">，是否删除这个自定义功能？</string>
    <string name="air_offline">净化器不在线</string>
    <string name="check_offline">检测器不在线</string>
    <string name="customize_timer">定时启动任务</string>
    <string name="unbinding_notice">从场景移除本设备？</string>
    <string name="add_device">添加设备</string>
    <string name="device_list_s">设备列表</string>
    <string name="recovery_device">恢复绑定</string>
    <string name="recovery_device_title">恢复</string>
    <string name="recovery_device_select">请选择要恢复到的场景</string>
    <string name="address">地址</string>
    <string name="city">城市</string>
    <string name="area">区</string>
    <string name="province">省份</string>
    <string name="my_address">我的家庭位置</string>
    <string name="add_member">添加我的家庭成员</string>
    <string name="member_name">称呼</string>
    <string name="control_permission">允许操作我的设备</string>
    <string name="send_invite">发出邀请</string>
    <string name="keep_account">保持关系</string>
    <string name="change_account_content">已经接受了其他账号的绑定邀请，若要添加成员，先解除绑定。</string>
    <string name="invitation_content_1"> 邀请你加入他/她/它的智能家庭，是否加入？\n\n提示：同意加入后，您的账号将完整配置 </string>
    <string name="invitation_content_2"> 账号下的设备，无需设置，直接使用</string>
    <string name="get_invitation"> 向你发出邀请</string>
    <string name="send_invitation"> 邀请已发送</string>
    <string name="break_out_loading"> 正在解除绑定</string>
    <string name="break_out"> 已解除关系</string>
    <string name="ask_for_unbinding"> 正在绑定你的账号，共同使用你的设备，是否解除绑定？</string>
    <string name="in_binding">绑定中</string>
    <string name="user_relation">用户关联</string>
    <string name="normal_message">普通消息</string>
    <string name="device_exception">设备异常修复</string>
    <string name="check_over_warn">检测超标警告</string>
    <string name="i_know">我知道了</string>
    <string name="add_success">新增成功</string>
    <string name="modify_success">修改成功</string>
    <string name="add_scene_content">请根据你的设备所在位置，创建您自己的场景，然后添加设备</string>
    <string name="scene_name">场景名称</string>
    <string name="task_name">任务名称</string>
    <string name="model_day">日常</string>
    <string name="model_sleep">睡眠</string>
    <string name="model_shot">喷射</string>
    <string name="model_normal">普通</string>
    <string name="madel_strong">加强</string>
    <string name="hour_1">1小时</string>
    <string name="hour_2">2小时</string>
    <string name="hour_3">3小时</string>
    <string name="calendar">历史</string>
    <string name="family_member">我的家庭成员</string>
    <string name="message_full">已经没有消息了</string>
    <string name="setting_profile">个人信息</string>
    <string name="setting_help">帮助与标准</string>
    <string name="setting_push">应用设置</string>
    <string name="setting_member">家庭成员</string>
    <string name="setting_about">关于</string>
    <string name="this_account">当前账号</string>
    <string name="this_account_remove_unable">当前账号</string>
    <string name="not_binding">未绑定</string>
    <string name="no_name">未设置姓名</string>
    <string name="ask_for_exit">是否登出？</string>
    <string name="loading_exit">正在退出</string>
    <string name="edit_profile">查看编辑个人信息</string>
    <string name="loading">正在获取</string>
    <string name="clear_success">清理成功</string>
    <string name="scene_manage">我的场景</string>
    <string name="scene_add">添加场景</string>
    <string name="scene_modify">修改场景信息</string>
    <string name="quick_set">快速配置</string>
    <string name="connect_guide">配置向导</string>
    <string name="get_scene_failed">获取场景列表失败</string>
    <string name="quit_quick_set">退出快速配置</string>
    <string name="quit_quick_set_content">确认退出设备快速配置吗</string>
    <string name="common_connect_failed">设备连接已断开</string>
    <string name="upload_cycle">回传检测数据频率</string>
    <string name="panel_light">自动关闭面板灯</string>
    <string name="check_status">传感器状态</string>
    <string name="action_status">净化器状态</string>
    <string name="work_light">工作提示灯</string>
    <string name="wind_light">风扇彩灯</string>
    <string name="open_close">开关</string>
    <string name="timer">定时</string>
    <string name="switch_net">滤网更换</string>
    <string name="switch_net_message">滤网需要更换了哦！</string>
    <string name="wifi_account">WiFi SSID</string>
    <string name="connect_help">连接帮助</string>
    <string name="connect_help_content">1.请在下面输入手机当前连接的WiFi密码 \n\n2.点击设备的WiFi网络按键3秒，直至按键灯闪烁（如果是净化器，需关闭净化器才进行操作）\n\n3.点击对话框的【确认】开始配置网络</string>
    <string name="connect_title">为设备连接网络</string>
    <string name="upload_recycle_content">设置检测器收集数据的时间频率，单位为分钟</string>
    <string name="mac_found_title">登记新的设备</string>
    <string name="mac_found_content">温馨提示：由于我们的服务器没找到您家的设备，所以请提交你的设备信息。\n\n请选择刚刚配置的设备：</string>
</resources>